@@ -9,3 +9,7 @@ Ceasar Miquel   miquel@df.uba.ar          submitted patches for the jpeg
                                           call
 
 Phillip Rainey                            helped with the web page
+
+Mirar		mirar@mirar.org	          can good enough to point out some
+                                          usability issues with the 0.3.1
+                                          release
